WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197123
REGRESSION(
r243958
): Unnecessary deactivation of AudioSession (PLT Regression)
https://bugs.webkit.org/show_bug.cgi?id=197123
Summary
REGRESSION(r243958): Unnecessary deactivation of AudioSession (PLT Regression)
Jer Noble
Reported
2019-04-19 15:12:15 PDT
REGRESSION(
r243958
): Unnecessary deactivation of AudioSession (PLT Regression)
Attachments
Patch
(2.14 KB, patch)
2019-04-19 15:14 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-04-19 15:12:39 PDT
<
rdar://problem/49783264
>
Radar WebKit Bug Importer
Comment 2
2019-04-19 15:12:55 PDT
<
rdar://problem/50061061
>
Jer Noble
Comment 3
2019-04-19 15:14:13 PDT
Created
attachment 367840
[details]
Patch
Jer Noble
Comment 4
2019-04-19 15:15:08 PDT
<
rdar://problem/49783264
>
Per Arne Vollan
Comment 5
2019-04-19 15:19:24 PDT
Comment on
attachment 367840
[details]
Patch Looks good! R=me.
Jer Noble
Comment 6
2019-04-19 15:25:57 PDT
Will cq+ when the EWS bots are done.
WebKit Commit Bot
Comment 7
2019-04-20 16:46:30 PDT
Comment on
attachment 367840
[details]
Patch Clearing flags on attachment: 367840 Committed
r244490
: <
https://trac.webkit.org/changeset/244490
>
WebKit Commit Bot
Comment 8
2019-04-20 16:46:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug