REGRESSION(r243958): Unnecessary deactivation of AudioSession (PLT Regression) https://bugs.webkit.org/show_bug.cgi?id=197123 <rdar://problem/49783264>

Reviewed by Per Arne Vollan.

Only set m_becameActive if we actually activated the AudioSession before starting playback. This
avoids unnecessarily deactivating the AudioSession in processWillSuspend().

* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::sessionWillBeginPlayback):


Canonical link: https://commits.webkit.org/211365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244490 268f45cc-cd09-0410-ab3c-d52691b4dbfc